@@ -8717,6 +8717,10 @@ part
     ;
 ;
 
+#------------------------------------------------------------
+# ATmega328P
+#------------------------------------------------------------
+
 part parent "m328"
     id			= "m328p";
     desc		= "ATmega328P";
@@ -8744,6 +8748,42 @@ part parent "m328"
                           "x x x x x x x x x x i i i i i i";
     ;
 ;
+
+
+#SOJRH - 99.4.2 - 20210705: New device signature for ATmega3208/3209
+# Device Name    Signature Bytes Address
+#                0x00    0x01    0x02
+# ATmega3208     0x1E    0x95    0x30
+# ATmega3209     0x1E    0x95    0x31
+
+#------------------------------------------------------------
+# ATmega3208
+#------------------------------------------------------------
+
+# close to ATmega328
+
+part parent "m328"
+    id               = "m3208";
+    desc             = "ATmega3208";
+    signature        = 0x1e 0x95 0x30;
+
+  ;
+
+
+#------------------------------------------------------------
+# ATmega3209
+#------------------------------------------------------------
+
+# close to ATmega328
+
+part parent "m328"
+    id               = "m3209";
+    desc             = "ATmega3209";
+    signature        = 0x1e 0x95 0x31;
+
+  ;
+#SOJRH - 99.4.2
+
 
 #------------------------------------------------------------
 # ATtiny2313
